[package]
name = "ncino_sandbox"
version = "0.1.0"
edition.workspace = true
authors = ["nCino Inc."]
license = "UNLICENSED"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true
deno_console.workspace = true
deno_web.workspace = true
deno_webidl.workspace = true
deno_url.workspace = true
deno_fetch.workspace = true
anyhow.workspace = true
async-channel = "1.9.0"
cassette = "0.2.3"

[lib]
name = "ncino_sandbox"
path = "lib.rs"
